--- a/.travis.yml
+++ b/.travis.yml
@@ -22,10 +22,10 @@ after_success:
 #after_failure:
 
 # Monitor only these branches
-branches:
-  only:
-  - master
-  - dev
+#branches:
+#  only:
+#  - master
+#  - dev
 
 # You can delete the cache using travis-ci web interface
 cache:
