--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
   ],
   "require": {
     "php": "^7.1",
-    "monolog/monolog": "^1.23",
+    "monolog/monolog": "^1.23|^2.0",
     "league/flysystem": "^1.0"
   },
   "require-dev": {
