--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
   "name": "leon0399/monolog-flysystem",
   "description": "Writes your Monolog records into Flysystem files.",
+  "license": "MIT",
+  "type": "library",
   "keywords": [
     "log",
     "logging",
@@ -10,22 +12,20 @@
     "flysystem",
     "cloud logging"
   ],
-  "homepage": "http://github.com/leon0399/monolog-flysytem",
-  "type": "library",
-  "license": "MIT",
   "authors": [
     {
       "name": "Leonid Meleshin",
       "email": "leon.03.99@gmail.com"
     }
   ],
+  "homepage": "http://github.com/leon0399/monolog-flysytem",
   "require": {
-    "php": "^7.2",
-    "monolog/monolog": "^2.0",
-    "league/flysystem": "^1.0"
+    "php": "^7.4 || ^8.0",
+    "league/flysystem": "^1.0",
+    "monolog/monolog": "^2.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^7"
+    "phpunit/phpunit": "^9"
   },
   "autoload": {
     "psr-4": {
