--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
     }
   },
   "scripts": {
-    "test": "phpunit"
+    "test": "phpunit --colors=always",
+    "test:ci": "composer test -- --verbose --coverage-text --coverage-clover=coverage.xml"
   }
 }
