make the php version in composer more accepting of compatible versions
Note: The minimum compatibility for PHPUnit ^9 is PHP >=7.3

--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
   ],
   "homepage": "http://github.com/leon0399/monolog-flysytem",
   "require": {
-    "php": "^7.4 || ^8.0",
+    "php": ">=7.3",
     "league/flysystem": "^1.0",
     "monolog/monolog": "^2.4"
   },
